Crashfix: Filter Dialog after the canvas is closed

KisDlgFilter depends on canvasBase for cleaning its state. We can't rely
on QCloseEvent & DeleteOnClose, since it can arrive after the canvas has
been destroyed, causing a crash.

BUG:438463